--- a/client/src/components/Pagination/styles.scss
+++ b/client/src/components/Pagination/styles.scss
@@ -55,6 +55,7 @@ button.before-button, button.after-button {
 
 .page-item.before :hover, .page-item.after :hover {
     cursor: pointer;
+    background-color: #32a9d4;
 }
 
 /*remove arrows from input*/
