--- a/client/src/containers/SideBar/styles.scss
+++ b/client/src/containers/SideBar/styles.scss
@@ -1,3 +1,7 @@
 $sidebarWidth: 70px;
 $sidebarExpandedWidth: 250px;
 $sidebarTransition: 0.5s;
+
+.sidenav-subnav---1EN61{
+  background-color:  #32a9d4 !important;
+}
