--- a/client/assets/modules/templates/layout.scss
+++ b/client/assets/modules/templates/layout.scss
@@ -131,9 +131,10 @@ h3.logo {
 
     &.no-side-bar {
         width: 100%;
-        margin-left: 0;
+        margin: 20px;
         display: flex;
         justify-content: center;
+        align-items: center;
         flex-direction: column;
     }
 
