implementing live tail

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -26,6 +26,7 @@
 @import "assets/modules/templates/sidebar.scss";
 
 @import "containers/NodesList/Node/styles.scss";
+@import "containers/Tail/styles.scss";
 @import "containers/TopicList/Topic/TopicProduce/styles.scss";
 @import "~react-datepicker/dist/react-datepicker.css";
 
