added missing configs

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -28,6 +28,7 @@
 @import "containers/NodesList/Node/styles.scss";
 @import "containers/TopicList/Topic/TopicProduce/styles.scss";
 @import "~react-datepicker/dist/react-datepicker.css";
+@import "containers/PageNotFound/styles.scss";
 
 .App {
   text-align: center;
