--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -26,6 +26,8 @@
 @import "assets/modules/templates/sidebar.scss";
 @import "./containers/SideBar/styles.scss";
 @import "./components/Base/Base.scss";
+@import "./components/Table/styles.scss";
+@import "./containers/Tail/styles.scss";
 @import "./variables.scss";
 
 body {
