--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -29,6 +29,7 @@
 @import "containers/TopicList/Topic/TopicProduce/styles.scss";
 @import "containers/Tail/styles.scss";
 @import "~react-datepicker/dist/react-datepicker.css";
+@import "containers/PageNotFound/styles.scss";
 
 .App {
   text-align: center;
