Akhq 191 fix pagination styling (#119)

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -30,6 +30,9 @@
 @import "containers/Tail/styles.scss";
 @import "~react-datepicker/dist/react-datepicker.css";
 @import "containers/PageNotFound/styles.scss";
+@import "../node_modules/bootstrap/dist/css/bootstrap.css";
+@import "containers/PageNotFound/styles.scss";
+
 
 .App {
   text-align: center;
@@ -48,7 +51,7 @@
 }
 
 
-.App-header {
+/*.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -61,7 +64,7 @@
 
 .App-link {
   color: #61dafb;
-}
+}*/
 
 @keyframes App-logo-spin {
   from {
@@ -213,7 +216,7 @@ h3.logo sup {
     margin-top: 0;
   }
   .khq-nav input, .khq-nav .bootstrap-select, .khq-nav select {
-    width: 100% !important;
+    width: 100% /*!important*/;
   }
   .khq-nav button.btn-primary {
     display: block;
