--- a/client/src/containers/SideBar/styles.scss
+++ b/client/src/containers/SideBar/styles.scss
@@ -2,6 +2,13 @@ $sidebarWidth: 70px;
 $sidebarExpandedWidth: 250px;
 $sidebarTransition: 0.5s;
 
+.clusters{
+    text-overflow: ellipsis;
+    direction: ltr;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 90px;
+}
 .sidenav-subnav---1EN61{
   background-color:  #32a9d4 !important;
 }
