--- a/client/src/containers/SideBar/styles.scss
+++ b/client/src/containers/SideBar/styles.scss
@@ -2,6 +2,13 @@ $sidebarWidth: 70px;
 $sidebarExpandedWidth: 250px;
 $sidebarTransition: 0.5s;
 
+nav {
+    -webkit-transition: all 1s ease !important;  
+    -moz-transition: all 1s ease !important;  
+    -o-transition: all 1s ease !important;  
+    -ms-transition: all 1s ease !important;  
+    transition: all 1s ease !important;
+}
 .clusters{
     text-overflow: ellipsis;
     direction: ltr;
