added missing margin in create and produce topic

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2869,9 +2869,9 @@ textarea.form-control {
   height: auto;
 }
 
-.form-group {
+/*.form-group {
   margin-bottom: 0 ;
-}
+}*/
 
 .form-text {
   display: block;
