--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -374,7 +374,7 @@ h3.logo sup {
     margin-top: 0;
   }
   .khq-nav input, .khq-nav .bootstrap-select, .khq-nav select {
-    width: 100%;
+    width: 100%!important;
   }
   .khq-nav button.btn-primary {
     display: block;
