--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -178,7 +178,6 @@ $scrollbar-width: 0.5em;
 
 body {
   -webkit-font-smoothing: antialiased;
-  //min-width: 992px;
   margin: 0;
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 0.875rem;
@@ -362,25 +361,24 @@ h3.logo sup {
   top: 0;
 }
 
-@media (min-width: 992px) {
-  .khq-nav input, .khq-nav button, .khq-nav select, .khq-nav .bootstrap-select {
-    margin-right: 0.5rem;
-  }
+.khq-nav input, .khq-nav button, .khq-nav select, .khq-nav .bootstrap-select {
+  margin-right: 0.5rem;
 }
 
+/*.khq-nav input, .khq-nav button, .khq-nav select {
+  margin-top: 0.5rem;
+}*/
+
 @media (max-width: 991.98px) {
-  .khq-nav input, .khq-nav button, .khq-nav select {
-    margin-top: 0.5rem;
-  }
   .khq-nav .navbar-toggler {
     margin-top: 0;
   }
   .khq-nav input, .khq-nav .bootstrap-select, .khq-nav select {
-    width: 100% !important;
+    width: 100%!important;
   }
   .khq-nav button.btn-primary {
     display: block;
-    width: 100%;
+    //margin-left: 1%;
   }
   .khq-nav .btn-group {
     width: 100%;
@@ -428,11 +426,11 @@ h3.logo sup {
   }
 }
 
-//@media (max-width: 767.98px) {
-//  #content {
-//    width: 100%;
-//  }
-//}
+@media (max-width: 767.98px) {
+  #content {
+    width: 100%;
+  }
+}
 
 #content.no-side-bar {
   width: 100%;
@@ -504,6 +502,7 @@ form.khq-form div.khq-submit > div:last-child,
 form.khq-form div.khq-submit .btn,
 #content aside .btn {
   white-space: nowrap;
+  margin-right: 1%;
 }
 
 .tab-pane form.khq-form div.khq-submit {
@@ -1593,6 +1592,7 @@ pre code {
   flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
+  margin-bottom: 5px;
 }
 
 .no-gutters {
@@ -2870,9 +2870,9 @@ textarea.form-control {
   height: auto;
 }
 
-.form-group {
-  margin-bottom: 1rem;
-}
+/*.form-group {
+  margin-bottom: 0 ;
+}*/
 
 .form-text {
   display: block;
@@ -3183,6 +3183,12 @@ textarea.form-control {
   width: 100%;
 }
 
+.form-inline .form-control {
+  display: inline-block;
+  width: auto;
+  vertical-align: middle;
+}
+
 @media (min-width: 576px) {
   .form-inline label {
     display: flex;
@@ -3190,17 +3196,11 @@ textarea.form-control {
     justify-content: center;
     margin-bottom: 0;
   }
-  .form-inline .form-group {
+  .form-inline {
     display: flex;
     flex: 0 0 auto;
     flex-flow: row wrap;
     align-items: center;
-    margin-bottom: 0;
-  }
-  .form-inline .form-control {
-    display: inline-block;
-    width: auto;
-    vertical-align: middle;
   }
   .form-inline .form-control-plaintext {
     display: inline-block;
@@ -5105,6 +5105,40 @@ input[type="button"].btn-block {
   align-items: center;
   justify-content: space-between;
   padding: 1rem 1rem;
+
+  @media (max-width: 991.98px) {
+    .btn {
+      width: 100%;
+      margin-right: 0;
+    }
+    .col-sm-10 {
+      width: 100%;
+      max-width: 100%;
+      flex: auto;
+      padding: 0;
+    }
+
+    .form-control {
+      width: 100%;
+      max-width: 100%;
+      flex: auto;
+    }
+
+    .form-inline .form-group  {
+      width: 100%;
+      margin-right: 0;
+      margin-left: 0;
+      margin-bottom: 5px;
+    }
+
+    .navbar-toggler{
+      margin-bottom: 5px;
+    }
+
+    .btn-group.actions {
+      margin-top: 5px;
+    }
+  }
 }
 
 .navbar > .container,
@@ -15538,8 +15572,7 @@ select.selectpicker {
 }
 
 .form-inline .bootstrap-select,
-.form-horizontal .bootstrap-select,
-.form-group .bootstrap-select {
+.form-horizontal .bootstrap-select,.bootstrap-select {
   margin-bottom: 0;
 }
 
