--- a/client/src/containers/TopicList/Topic/TopicData/styles.scss
+++ b/client/src/containers/TopicList/Topic/TopicData/styles.scss
@@ -134,6 +134,20 @@ Datepicker div.form-group.row {
     }
 }
 
+.loader {
+    border: 5px solid #f3f3f3; /* Light grey */
+    border-top: 5px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
 .clickable {
     cursor: pointer;
 }
