--- a/client/src/containers/Tail/styles.scss
+++ b/client/src/containers/Tail/styles.scss
@@ -7,7 +7,7 @@
   @media (max-width: 991.98px) {
     width: 100%;
     padding-right: 0;
-    margin: 0;
+    margin: 0!important;
 
     .tail-search-input {
       width: 100%;
