--- a/client/src/components/SearchBar/styles.scss
+++ b/client/src/components/SearchBar/styles.scss
@@ -1,3 +1,19 @@
+.topic-search-wrapper, .select-wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 20px;
+
+  @media (max-width: 991.98px) {
+    width: 100%;
+    padding-right: 0;
+    margin: 0!important;
+
+    .topic-search-input, .select-class {
+      width: 100%;
+    }
+  }
+}
+
 // .info {
 //     display: inline-block;
 //     height: 100%;
