Akhq 250 consumer group pagination wrong (#155)
* fixed bug

* fixed total number of pages bug

* changed pagination color to blue

* consumer group cell is button success or button warning to indicate if it's active or not

--- a/client/src/components/Pagination/styles.scss
+++ b/client/src/components/Pagination/styles.scss
@@ -45,6 +45,10 @@
     vertical-align: middle;
 }
 
+.page-link:not(.page-number){
+    background-color: #32a9d4 !important;
+}
+
 button.before-button, button.after-button {
     background-color: Transparent;
     background-repeat:no-repeat;
