Akhq 252 adjust navbar width (#160)
* fixed bug

* submit bar occupies whole width of page

* added margin bottom to connects in sidebar that were hidden when scrolling through page

* navbar is occupying the whole page width

--- a/assets/modules/templates/layout.scss
+++ b/assets/modules/templates/layout.scss
@@ -173,7 +173,7 @@ form.khq-form div.khq-submit,
 
     @include media-breakpoint-up(md) {
         left: $menu-width;
-        width: calc(100vw - #{$menu-width} - 15px);
+        /*width: calc(100vw - #{$menu-width} - 15px);*/
     }
 
     > div {
