Akhq 238 toast always on screen (#162)
* fixed bug

* toast always on screen

--- a/client/src/components/Toast/styles.scss
+++ b/client/src/components/Toast/styles.scss
@@ -1,7 +1,7 @@
 .swal2-popup.swal2-toast.swal2-show {
     display: flex;
     float: right;
-    position: absolute;
+    position: fixed;
     right: 0.5rem;
     top: 0.8rem;
 }
