AKHQ-207 - Table Sort (#163)
* implemented basic sort rules on table

* removed console.logs

* removed more console.logs

--- a/client/src/components/Table/styles.scss
+++ b/client/src/components/Table/styles.scss
@@ -18,3 +18,11 @@
   max-height: 30px !important;
   overflow: hidden;
 }
+
+.header-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
