Ahkq 251 adjust sidebar height to page height (#158)
* fixed bug

* sidebar occupies whole height of page dynamically

* reverted

* added validations when schema is undefined

* fixed select size

* rollback

* fixed searchbar and select css bugs

* removed comment

* removed unnecessary code

* sidebar height dynamic

* removed useless condition

* added condition to prevent error

* fixed sidebar not dynamic in create definition page

* first column is now adjusting its width when reducing window size

* moved css change from assets/modules/ (old ui) to index.scss (new ui)

* removed unnecessary code

* removed duplicated line

* removed comment

* removed character

Co-authored-by: PM <paulo.marques@polarising.com>

--- a/client/src/components/SearchBar/styles.scss
+++ b/client/src/components/SearchBar/styles.scss
@@ -1,16 +1,21 @@
 .topic-search-wrapper, .select-wrapper {
   display: flex;
   justify-content: space-between;
-  padding-right: 20px;
+  margin-left: 0px !important;
 
   @media (max-width: 991.98px) {
     width: 100%;
-    padding-right: 0;
-    margin: 0!important;
+    margin: 0 !important;
 
     .topic-search-input, .select-class {
       width: 100%;
     }
+  }
+}
+
+@media (min-width: 991.98px) {
+  .topic-search-input, .select-class{
+    margin-right: 1rem;
   }
 }
 
