--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -69,3 +69,11 @@ $fa-font-path: "../fonts";
   width: 100%;
   left: 0;
 }
+
+.khq-data-filter {
+  @include media-breakpoint-up(sm) {
+    select {
+      max-width: 100%;
+    }
+  }
+}
