fix some error on backend

--- a/client/src/components/Pagination/styles.scss
+++ b/client/src/components/Pagination/styles.scss
@@ -1,7 +1,8 @@
 @import "../assets/css/init";
 
-.page-input{
-    width: 30px;
+input.page-input{
+    width: 30px !important;
+    margin-top: 0;
     border: 0;
     padding: 0;
     background: transparent;
