--- a/client/src/containers/TopicList/Topic/TopicData/styles.scss
+++ b/client/src/containers/TopicList/Topic/TopicData/styles.scss
@@ -134,3 +134,7 @@ Datepicker div.form-group.row {
 .input-group > .btn-border > button {
     border-radius: 4px;
 }
+
+.justify-items > span + span {
+    margin-left: 8px;
+}
