Akhq 234 topic produce responsive layout (#168)
* fixed bug

* topic produce responsive in extra small screens

--- a/client/src/containers/TopicList/Topic/TopicProduce/styles.scss
+++ b/client/src/containers/TopicList/Topic/TopicProduce/styles.scss
@@ -24,3 +24,17 @@
   padding: 0 !important;
   padding-right: 2% !important;
 }
+
+@media (max-width: 575px) {
+  .wrapper-class.key{
+    margin-left: 15px;
+  }
+
+  .wrapper-class{
+    padding-right: 0px;
+  }
+
+  .header-row{
+    width: 102%;
+  }
+}
