Akhq 260 topic data columns wide (#180)
* fixed bug

* added word-break to first column of the topic data table

--- a/client/src/containers/TopicList/Topic/TopicData/styles.scss
+++ b/client/src/containers/TopicList/Topic/TopicData/styles.scss
@@ -138,3 +138,7 @@ Datepicker div.form-group.row {
 .justify-items > span + span {
     margin-left: 8px;
 }
+
+code{
+    word-break: break-word;
+}
