Akhq 268 dropdown fix error (#184)
* fixed bug

* urls in topic page are dynamic

* urls in connect are dynamic

* urls in node page are dynamic

* url in schema page are dynamic

* dropdown redirecting to error page when dropdown value is empty fixed in connect create

* searchbar responsive again

* search bar responsive in big screens

--- a/client/src/components/SearchBar/styles.scss
+++ b/client/src/components/SearchBar/styles.scss
@@ -17,6 +17,10 @@
   .topic-search-input, .select-class{
     margin-right: 1rem;
   }
+  .select-wrapper{
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 // .info {
