--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -28,6 +28,7 @@ $fa-font-path: "../fonts";
 @import "components/Form/Select/styles.scss";
 @import "components/DatePicker/styles.scss";
 @import "components/Pagination/styles.scss";
+@import "components/SearchBar/styles.scss";
 
 // containers
 @import "containers/SideBar/styles.scss";
