Akhq 269 pagination responsive (#186)
* fixed bug

* pagination in topic list responsive

* schema update responsive in smalller screens

* topic data search field responsive

--- a/client/src/containers/TopicList/Topic/TopicData/styles.scss
+++ b/client/src/containers/TopicList/Topic/TopicData/styles.scss
@@ -142,3 +142,16 @@ Datepicker div.form-group.row {
 code{
     word-break: break-word;
 }
+
+.inline-block{
+    display: inline;
+}
+
+@media (max-width: 991.98px) {
+    .khq-nav button.btn.btn-primary.inline-block {
+        width: calc(49%);
+    }
+    .search{
+        margin-right: 2%;
+    }
+}
