--- a/client/src/containers/Topic/TopicCopy/styles.scss
+++ b/client/src/containers/Topic/TopicCopy/styles.scss
@@ -6,11 +6,16 @@
     padding-left: 1.5rem;
 }
 
-.partition-input {
-    margin-bottom: 0;
-    width: 80%;
+.row-checkbox {
+    margin-left: 0;
+    align-items: baseline;
 }
 
-.partition-input-div {
-    width: 100%;
+.select-wrapper-copy {
+    width: 80%;
+    margin-bottom: 1rem;
+}
+
+.input-nr-messages {
+    margin-left: 3px;
 }
