Adjusted for generic key value separator

--- a/client/src/components/Form/styles.scss
+++ b/client/src/components/Form/styles.scss
@@ -34,3 +34,8 @@ input.placeholder{
     font-family: "Source Code Pro",SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
     transform: scale(1);
 }
+
+.form-input-check{
+    margin-block: auto;
+}
+ 
