Fix configuration so that prettier runs correctly on all files

--- a/client/src/components/Form/styles.scss
+++ b/client/src/components/Form/styles.scss
@@ -1,41 +1,41 @@
-.button-khq-submit.button-footer{
-    display: inline-block !important;
-    width: 100% !important;
-    height: 5% !important;
+.button-khq-submit.button-footer {
+  display: inline-block !important;
+  width: 100% !important;
+  height: 5% !important;
 }
 
-.react-dropdown-select{
-    height: calc(1.5em + 0.75rem + 2px) !important;
-    border: 1px solid #ced4da !important;
-    border-radius: 0.25rem !important;
-    padding: 0.375rem 0.75rem !important;
+.react-dropdown-select {
+  height: calc(1.5em + 0.75rem + 2px) !important;
+  border: 1px solid #ced4da !important;
+  border-radius: 0.25rem !important;
+  padding: 0.375rem 0.75rem !important;
 }
 
-svg{
-    color: #000000;
+svg {
+  color: #000000;
 }
 
-.btn.dropdown-toggle.btn-white.dropdown-toggle.btn.btn-primary{
-    height: 35px;
+.btn.dropdown-toggle.btn-white.dropdown-toggle.btn.btn-primary {
+  height: 35px;
 }
 
-input.placeholder{
-    border-color: transparent;
-    border-bottom-color: transparent !important;
-    width: 100%;
-    padding: 0px;
+input.placeholder {
+  border-color: transparent;
+  border-bottom-color: transparent !important;
+  width: 100%;
+  padding: 0px;
 }
 
 .ace_active-line {
-    opacity: 0.2;
+  opacity: 0.2;
 }
 
 .ace_placeholder {
-    font-family: "Source Code Pro",SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-    transform: scale(1);
+  font-family: 'Source Code Pro', SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
+    'Courier New', monospace;
+  transform: scale(1);
 }
 
-.form-input-check{
-    margin-block: auto;
+.form-input-check {
+  margin-block: auto;
 }
- 
