--- a/client/src/containers/Settings/styles.scss
+++ b/client/src/containers/Settings/styles.scss
@@ -1,7 +1,7 @@
 .settings-wrapper {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .row-checkbox-settings {
-    align-self: center
+  align-self: center;
 }
