--- a/client/src/css/_variables.scss
+++ b/client/src/css/_variables.scss
@@ -3,9 +3,14 @@
 \* ----------------------------------------------------------------------------------------------------------------- */
 
 // Typography
-$font-family-sans-serif: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-$font-family-monospace: "Source Code Pro", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
-$font-family-title: "Open Sans Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-sans-serif: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+  'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+  'Noto Color Emoji' !default;
+$font-family-monospace: 'Source Code Pro', SFMono-Regular, Menlo, Monaco, Consolas,
+  'Liberation Mono', 'Courier New', monospace !default;
+$font-family-title: 'Open Sans Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+  'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+  'Noto Color Emoji' !default;
 $font-size-base: 0.875rem;
 $font-weight-bolder: 700;
 
@@ -31,7 +36,7 @@ $orange: #eb7b18 !default;
 $yellow: #ecbb13 !default;
 $green: #299c46 !default;
 $teal: #20c997 !default;
-$cyan: #3498DB !default;
+$cyan: #3498db !default;
 
 $primary: $blue !default;
 $secondary: $gray-700 !default;
@@ -44,8 +49,8 @@ $light: $gray-800 !default;
 $dark: $gray-500 !default;
 
 $theme-colors: (
-    "tertiary": $tertiary,
-    "white": $white
+  'tertiary': $tertiary,
+  'white': $white
 );
 
 $yiq-contrasted-threshold: 175 !default;
@@ -95,11 +100,11 @@ $nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-colo
 $navbar-padding-y: 1rem !default;
 $navbar-dark-color: $white !default;
 $navbar-dark-hover-color: $success !default;
-$navbar-light-color: rgba($white, .5) !default;
+$navbar-light-color: rgba($white, 0.5) !default;
 $navbar-light-hover-color: $white !default;
 $navbar-light-active-color: $white !default;
-$navbar-light-disabled-color: rgba($white, .3) !default;
-$navbar-light-toggler-border-color: rgba($white, .1) !default;
+$navbar-light-disabled-color: rgba($white, 0.3) !default;
+$navbar-light-toggler-border-color: rgba($white, 0.1) !default;
 
 // Pagination
 $pagination-color: $white !default;
@@ -152,10 +157,10 @@ $pre-color: inherit !default;
 /* ----------------------------------------------------------------------------------------------------------------- *\
     Font Awesome
 \* ----------------------------------------------------------------------------------------------------------------- */
-$fa-font-path: "~/font-awesome/fonts/";
+$fa-font-path: '~/font-awesome/fonts/';
 
 /* ----------------------------------------------------------------------------------------------------------------- *\
     Menu
 \* ----------------------------------------------------------------------------------------------------------------- */
 $menu-width: 250px;
-$scrollbar-width: 0.5em
+$scrollbar-width: 0.5em;
