--- a/client/src/css/tables/row-action.scss
+++ b/client/src/css/tables/row-action.scss
@@ -1,11 +1,12 @@
 table {
-    td.khq-row-action, th.khq-row-action {
-        width: 16px;
-    }
+  td.khq-row-action,
+  th.khq-row-action {
+    width: 16px;
+  }
 
-    tbody {
-        .khq-main-row-action {
-            cursor: pointer;
-        }
+  tbody {
+    .khq-main-row-action {
+      cursor: pointer;
     }
+  }
 }
