chore(deps): update all docs packages

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -9,6 +9,7 @@ $font-family-monospace: 'Source Code Pro', SFMono-Regular, Menlo, Monaco, Consol
 
 @import "bootstrap/scss/functions";
 @import "bootstrap/scss/variables";
+@import "bootstrap/scss/variables-dark";
 @import "bootstrap/scss/mixins";
 @import "bootstrap/scss/maps";
 @import "bootstrap/scss/utilities";
